Fixed layout issue

--- a/src/style.css
+++ b/src/style.css
@@ -40,6 +40,7 @@ MAIN LAYOUT
 @media (max-width: 900px) {
   .main {
     grid-template-columns: 1fr;
+    height: auto;
   }
 }
 
